--- a/Site.css
+++ b/Site.css
@@ -18,7 +18,7 @@
 }
 
 #blur {
-    height: 600vh;
+    height: 530vh;
     width: 100%;
     position: absolute;
     z-index: -1;
@@ -54,9 +54,8 @@
 body {
     background-color: rgb(12, 12, 12);
     height: 100vh;
-    padding: 0;
     margin: 0rem;
-  }
+}
 
   h1 {
     font-family: 'Space Mono', monospace;
@@ -73,7 +72,7 @@ body {
     opacity: 1;
     animation: text 6s;
     cursor: default;
-  }
+}
 
   h2 {
     font-family: 'Space Mono', monospace;
@@ -90,7 +89,7 @@ body {
     opacity: 1;
     animation: text 6s;
     cursor: default;
-  }
+}
 
 section {
     display: grid;
@@ -111,6 +110,7 @@ p {
     translate: -30% -50%;
     z-index: 3;
     opacity: 1;
+    cursor: default;
 }
 
 h5 {
@@ -125,18 +125,17 @@ h5 {
     z-index: 3;
     opacity: 1;
     padding: 0rem clamp(1rem, 2vw, 3rem);
+    cursor: default;
 }
 
 .hidden {
     transition: all 2s;
     transform: translateX(-100%);
-    opacity: 1;
     filter: blur(5px);
 }
 
 .show {
     transform: translateX(0);
-    opacity: 1;
     transition-timing-function: ease-in-out;
     filter: blur(0);
     transition-delay: 200ms;
@@ -189,3 +188,25 @@ video:hover {
     rotate: 1deg;
 }
 
+.button1 {
+    overflow: hidden;
+    transition: all 0.3s ease;
+    translate: -50vh 36vh;
+    cursor: pointer;
+    border-radius: 5px;
+    height: 200%;
+    width: 15%;
+    font-weight: bold;
+    border: none;
+    outline: none;
+    scale: 1.3;
+}
+
+.button1:hover {
+     background: #000;
+     color: #fff;
+}
+
+body::-webkit-scrollbar{
+    display: none;
+}
