--- a/Site.css
+++ b/Site.css
@@ -1,3 +1,18 @@
+body {
+    background-color: rgb(12, 12, 12);
+    margin: 0rem;
+}
+
+body::-webkit-scrollbar{
+    display: none;
+}
+
+section {
+    display: grid;
+    place-items: center;
+    min-height: 130vh;
+}
+
 #blob {
     height: 88vmax;
     aspect-ratio: 1;
@@ -57,20 +72,9 @@
     100% { transform: translateY(0); opacity: 0; }
 }
 
-body {
-    background-color: rgb(12, 12, 12);
-    height: 100vh;
-    margin: 0rem;
-}
-
-body::-webkit-scrollbar{
-    display: none;
-}
-
 h1 {
     font-size: clamp(3rem, 5vw, 10rem);
     color: white;
-    border-radius: clamp(0.4rem, 0.75vw, 1rem);
     margin: 0rem;
     position: absolute;
     left: 50%;
@@ -84,7 +88,6 @@ h2 {
     font-family: monospace;
     font-size: clamp(3rem, 1vw, 1rem);
     color: white;
-    border-radius: clamp(0.4rem, 0.75vw, 1rem);
     margin: 0rem;
     position: absolute;
     left: 50%;
@@ -92,13 +95,6 @@ h2 {
     translate: -50% -50%;
     animation: text 6s;
     cursor: default;
-}
-
-section {
-    display: grid;
-    place-items: center;
-    align-content: center;
-    min-height: 130vh;
 }
 
 p {
@@ -147,10 +143,9 @@ h5 {
     top: .6em;
     margin-left: -.25em;
     border-radius: 50%;
-    transform-origin: top center;
     backface-visibility: hidden;
     animation: scroll_2 2s ease-out infinite;
-  }
+}
 
   .scroll-icon {
     display: block;
@@ -160,7 +155,7 @@ h5 {
     border: .25em solid #fff;
     border-radius: 1em;
     translate: 0% 300%;
-  }
+}
 
 video {
     position: absolute;
@@ -169,7 +164,7 @@ video {
     border-width: 5px;
     border-radius: 1vh;
     border-color: white;
-    transition-duration: 600ms;
+    transition-duration: 300ms;
 }
 
 video:hover {
@@ -178,16 +173,17 @@ video:hover {
 }
 
 .button1 {
+    position: absolute;
     overflow: hidden;
     transition: all 0.3s ease;
-    translate: -60vh 37vh;
+    left: 12%;
+    top: 75%;
     cursor: pointer;
     border-radius: 5px;
     height: 5vh;
     width: 40vh;
     font-weight: bold;
     border: none;
-    outline: none;
     scale: 1.3;
 }
 
@@ -197,13 +193,14 @@ video:hover {
 }
 
 .button2 {
+    position: absolute;
     border-radius: 100%;
     border: none;
     height: 6vh;
     width: 6vh;
-    translate: 100vh 0vh;
+    left: 50%;
     scale: 1.3;
-    transition-duration: 300ms;
+    transition-duration: 200ms;
     transition-timing-function: ease-in-out;
     cursor: pointer;
 }
